<resources>
    <string name="app_name">TheYappyAppy</string>
    <string name="button_addWalk">Add Walk</string>
    <string name="button_saveWalk">Save Walk</string>
    <string name="hint_walkTitle">Walk Title</string>
    <string name="hint_walkDescription">Description </string>
    <string name="menu_addWalk">Add Walk</string>
    <string name="menu_cancelWalk">Cancel</string>
    <string name="enter_title">Please Enter a title</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_walkImage">Select image</string>
    <string name="change_walkImage">Change image</string>
    <string name="beach">Beach</string>
    <string name="park">Park</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="bins_provided">Bins provided:</string>
    <string name="lead_required">Lead required:</string>
    <string name="km">KM:</string>
    <string name="type">Type:</string>
    <string name="add_walk">Add Walk</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="click_here">Click Here</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="title_activity_walk_maps">Map of all walks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="menu_saveWalk">Save</string>
    <string name="menu_deleteWalk">Delete</string>
    <string name="title_activity_login">Sign Up or Log In</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="log_in">Log In</string>
</resources>