<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.theyappyappy.activities.WalkActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Add Walk"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:fontFamily="sans-serif" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/walkTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"

                    android:hint="@string/hint_walkTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_walkDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Type: "
                        android:fontFamily="sans-serif" />


                    <RadioButton
                        android:id="@+id/radio_beach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/beach"
                        app:layout_constraintBaseline_toBaselineOf="@+id/radio_park"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/radio_park"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/park"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radio_beach" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Bins provided: "
                        android:fontFamily="sans-serif" />


                    <RadioButton
                        android:id="@+id/radio_bins_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/yes"
                        app:layout_constraintBaseline_toBaselineOf="@+id/radio_park"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/radio_bins_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/no"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radio_beach" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Lead required: "
                        android:fontFamily="sans-serif" />

                    <RadioButton
                        android:id="@+id/radio_lead_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/yes"
                        app:layout_constraintBaseline_toBaselineOf="@+id/radio_park"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/radio_lead_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/no"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radio_beach" />
                </RadioGroup>

                <NumberPicker
                    android:id="@+id/lengthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/radioGroup3"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.973"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/walkImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <Button
                    android:id="@+id/walkLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="#212121"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addWalk"
                    android:textColor="#212121"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>